[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[[bin]]
name = "aoc-1"
path = "1/solution.rs"

[[bin]]
name = "aoc-2"
path = "2/solution.rs"

[[bin]]
name = "aoc-3"
path = "3/solution.rs"

[[bin]]
name = "aoc-6"
path = "6/solution.rs"

[[bin]]
name = "aoc-4"
path = "4/solution.rs"
